<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".intro.OnBoarding"
    android:background="@drawable/background">

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/nunito_bold"
        android:onClick="skip"
        android:text="@string/skip"
        android:textColor="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="642dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125">

    </androidx.viewpager.widget.ViewPager>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="397dp"
        android:layout_height="161dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider">

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="112dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="105dp"
            android:layout_marginBottom="107dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:fontFamily="@font/nunito_bold"
            android:onClick="letsGetStarted"
            android:text="@string/lets_startes"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignEnd="@+id/next_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="137dp"
            android:layout_marginLeft="137dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="39dp"
            android:layout_marginBottom="110dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:fontFamily="@font/nunito_bold"
            android:onClick="next"
            android:text="@string/next_btn"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/dots"
            android:layout_width="250dp"
            android:layout_height="66dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal" />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>