...
    <string name="third_slide_desc">You can get information about tha place you are interested in.
        Just click on the google icon for this.</string>
    <string name="fourth_slide_desc">You can collect a place you like or interest in a separate list by clicking the heart icon.
        So you can reach them faster.</string>
    <string name="fifth_slide_desc">You can get suggestions for events according to the weather of Istanbul.</string>

    <string name="next_btn">Next</string>
    <string name="skip">SKIP</string>
    <string name="lets_startes">Let\'s Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


...
