<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_myfavourites"
        android:icon="@drawable/healthcare"
        android:title="@string/title_myfavourites" />

    <item
        android:id="@+id/navigation_mylocation"
        android:icon="@drawable/map"
        android:title="@string/title_mylocations" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/setting"
        android:title="@string/title_settings" />

</menu>
