...
        app:fabCustomSize="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="30dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fav_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginBottom="60sp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
...
