...
                android:backgroundTint="@color/colorwhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/googleg_standard_color_18" />

            <ToggleButton
                android:id="@+id/favf"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:background="?android:selectableItemBackground"
                android:textIsSelectable="false"
...
